# dtv-schedule-rss

./: Dockerfile  Makefile  Pipfile  README.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build-and-push-image.yml  ci.yml  test.yml
app/: channel.py  config.py  http_client.py  lifespan.py  main.py  rss.py
app/channels/: __init__.py  fujitv.py  mx_tv.py  nhk.py  ntv.py  tbs.py  tv_asahi.py  tv_tokyo.py
app/utils/: cache.py  http.py
templates/: index.html
tests/: test_channel.py  test_integration.py  test_main.py
tests/channels/: test_fujitv.py  test_tbs.py  test_tv_asahi.py  test_tv_tokyo.py
tests/utils/: test_cache.py  test_http.py
