[project]
name = "dtv-schedule-rss"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "cachetools>=6.2.4",
    "fastapi>=0.128.0",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "uvicorn[standard]>=0.40.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "types-cachetools>=6.2.0.20251022",
    "types-requests>=2.32.4.20260107",
]
