[project]
name = "dtv-schedule-rss"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "async-lru>=2.0.4",
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.128.0",
    "pydantic>=2.12.5",
    "uvicorn[standard]>=0.40.0",
    "httpx[http2]>=0.28.1",
    "tenacity>=9.1.2",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.23.2",
    "ruff>=0.5.5",
    "types-cachetools>=6.2.0.20251022",
    "types-requests>=2.32.4.20260107",
]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
